<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

<name>local</name> <version>0.1.0</version>

<description>Robot localization package</description>

  <maintainer email="rpobrien@tudelft.nl">
    Rory O'Brien
  </maintainer>

<license>MIT</license>

<buildtool_depend>ament_python</buildtool_depend>

<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>tf2_ros</exec_depend>

<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>

<test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
